--- a/index.css
+++ b/index.css
@@ -1,4 +1,36 @@
+* {
+    margin: 0%;
+    padding: 0%;
+    box-sizing: border-box;
+    background-color: aliceblue;
+}
+
 .title{
     text-align: center;
-    background-color: aliceblue;
+}
+
+.contenedor1{
+    display: flex;
+    flex-direction: row;
+    margin: 1rem;
+    padding: 1rem;
+}
+
+.contenedor3{
+    width: 300px; height: 500px; 
+}
+
+.fila1{
+    display: flex;
+    flex-direction: row;
+}
+
+.contenedor4{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.contenedor6{
+    width: 500px; height: 500px; 
 }
